feat: add fontawesome offline and get image from the sftp server

--- a/about.html
+++ b/about.html
@@ -8,20 +8,10 @@
       name="description"
       content="Learn more about EcoPrint Generation — an eco-friendly printing company dedicated to sustainable design, green technology, and innovation."
     />
-
-    <link
-      rel="preload"
-      as="image"
-      href="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
-      fetchpriority="high"
-    />
     <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/animate.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="assets/css/all.min.css">
   </head>
   <body>
     <!-- Navbar Start -->
@@ -29,9 +19,10 @@
       <div class="container">
         <a href="#" class="brand">
           <img
-            src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            src="https://kifaru.infi-saas.com/media/Eco-Print/img/gyqgmn0awfvulr3dfoio.png"
             alt="Logo"
             class="logo"
+            loading="lazy"
           />
         </a>
         <button class="hamburger" id="hamburger">
@@ -149,17 +140,18 @@
             <div class="ab-media">
               <div class="ab-image">
                 <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/zxqgxhqccjh0jhsjiq6e.jpg"
+                  src="https://kifaru.infi-saas.com/media/Eco-Print/img/zxqgxhqccjh0jhsjiq6e.jpg"
                   alt="Image"
+                  loading="lazy"
                 />
               </div>
               <div class="ab-video">
                 <video
                   muted
-                  poster="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/bgtrg9rfbcptnfsmjq7r.jpg"
+                  poster="https://kifaru.infi-saas.com/media/Eco-Print/img/bgtrg9rfbcptnfsmjq7r.jpg"
                 >
                   <source
-                    src="https://res.cloudinary.com/drselhsl4/video/upload/v1761146482/EcoPrintGeneration/videos/k8ju7npozxfwn09uhwsq.mp4"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/videos/k8ju7npozxfwn09uhwsq.mp4"
                     type="video/mp4"
                   />
                 </video>
@@ -171,8 +163,9 @@
               </div>
               <div class="ab-image">
                 <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/uu67vkvgqluz6kslicqq.jpg"
+                  src="https://kifaru.infi-saas.com/media/Eco-Print/img/uu67vkvgqluz6kslicqq.jpg"
                   alt="Image"
+                  loading="lazy"
                 />
               </div>
             </div>
@@ -194,8 +187,9 @@
                 data-wow-delay="0.2s"
               >
                 <img
-                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146379/EcoPrintGeneration/img/ey35335fvp4e7esyu1j6.png"
+                  src="https://kifaru.infi-saas.com/media/Eco-Print/img/ey35335fvp4e7esyu1j6.png"
                   alt="person graphic"
+                  loading="lazy"
                 />
               </div>
             </div>
@@ -207,8 +201,9 @@
                 <div class="service-card fadeIn">
                   <div class="icon">
                     <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1762624544/EcoPrintGeneration/img/pviyxxmbyvx3lyas65zk.png"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/img/pviyxxmbyvx3lyas65zk.png"
                       alt="Purpose Over Profit"
+                      loading="lazy"
                     />
                   </div>
                   <div class="right-text">
@@ -222,8 +217,9 @@
                 <div class="service-card fadeIn">
                   <div class="icon">
                     <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146414/EcoPrintGeneration/img/up4cii8inoogxkxkcrb9.png"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/img/up4cii8inoogxkxkcrb9.png"
                       alt="Sustainability by Design"
+                      loading="lazy"
                     />
                   </div>
                   <div class="right-text">
@@ -237,8 +233,9 @@
                 <div class="service-card fadeIn">
                   <div class="icon">
                     <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146385/EcoPrintGeneration/img/vvdzfzaxq9sz0id71g4m.png"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/img/vvdzfzaxq9sz0id71g4m.png"
                       alt="Innovation with Heart"
+                      loading="lazy"
                     />
                   </div>
                   <div class="right-text">
@@ -252,8 +249,9 @@
                 <div class="service-card fadeIn">
                   <div class="icon">
                     <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1762624562/EcoPrintGeneration/img/jutqsninfup7tqog7v4n.png"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/img/jutqsninfup7tqog7v4n.png"
                       alt="Integrity Always"
+                      loading="lazy"
                     />
                   </div>
                   <div class="right-text">
@@ -268,7 +266,8 @@
                 <div class="service-card fadeIn">
                   <div class="icon">
                     <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/z3lv8ycegptzadk35yfa.png"
+                      loading="lazy"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/img/z3lv8ycegptzadk35yfa.png"
                       alt="Community First"
                     />
                   </div>
@@ -336,7 +335,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/voxp68mgjrssut2kjbua.jpg"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/img/voxp68mgjrssut2kjbua.jpg"
                     alt="Collecting plastic waste"
                     loading="lazy"
                   />
@@ -354,7 +353,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146415/EcoPrintGeneration/img/t8ga5jh4zvsguw8gli8g.jpg"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/img/t8ga5jh4zvsguw8gli8g.jpg"
                     alt="Sorting and cleaning"
                     loading="lazy"
                   />
@@ -369,7 +368,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146412/EcoPrintGeneration/img/hao3bmjq9hdev3dqodgc.jpg"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/img/hao3bmjq9hdev3dqodgc.jpg"
                     alt="Shredding plastic"
                     loading="lazy"
                   />
@@ -384,7 +383,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/img/tkchbn5m34vhfulrgt9p.jpg"
                     alt="Extrusion to filament"
                     loading="lazy"
                   />
@@ -401,7 +400,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146412/EcoPrintGeneration/img/t33lagtr2hnuhlshy0wy.jpg"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/img/t33lagtr2hnuhlshy0wy.jpg"
                     alt="Spooling filament"
                     loading="lazy"
                   />
@@ -416,7 +415,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146385/EcoPrintGeneration/img/hv0fhn3t3wkfwoevqzcf.jpg"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/img/hv0fhn3t3wkfwoevqzcf.jpg"
                     alt="3D printing models"
                     loading="lazy"
                   />
@@ -431,7 +430,7 @@
               <li class="pq-step">
                 <figure class="pq-card">
                   <img
-                    src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/d7oplxia9xnqffcw0oat.jpg"
+                    src="https://kifaru.infi-saas.com/media/Eco-Print/img/d7oplxia9xnqffcw0oat.jpg"
                     alt="STEM education models in use"
                     loading="lazy"
                   />
@@ -463,7 +462,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/euwkaeruh1smakdjefgf.jpg"
+                      loading="lazy"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/ourteam/euwkaeruh1smakdjefgf.jpg"
                       alt="Photo of Gabriel Mwaingo"
                     />
                     <div>
@@ -483,7 +483,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/jzf69hpx8vlp9kdbewjg.jpg"
+                      loading="lazy"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/ourteam/jzf69hpx8vlp9kdbewjg.jpg"
                       alt="Photo of Shamayel Karani"
                     />
                     <div>
@@ -503,7 +504,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/fogfv1omc7dckgrh9c9t.jpg"
+                      loading="lazy"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/ourteam/fogfv1omc7dckgrh9c9t.jpg"
                       alt="Photo of Dafford Owino"
                     />
                     <div>
@@ -523,7 +525,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/uhzetwlc9wztt7ukn382.jpg"
+                      loading="lazy"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/ourteam/uhzetwlc9wztt7ukn382.jpg"
                       alt="Photo of Josphine Ocholla"
                     />
                     <div>
@@ -531,7 +534,9 @@
                       <p class="tms-role">EcoPrint CFO</p>
                     </div>
                   </div>
-                  <blockquote class="tms-quote">Strategic finance and portfolio management expertise</blockquote>
+                  <blockquote class="tms-quote">
+                    Strategic finance and portfolio management expertise
+                  </blockquote>
                 </figure>
               </li>
 
@@ -541,7 +546,8 @@
                   <div class="tms-top">
                     <img
                       class="tms-avatar"
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1770189068/EcoPrintGeneration/ourteam/ytpve1jpqvcygaxztszs.jpg"
+                      src="https://kifaru.infi-saas.com/media/Eco-Print/ourteam/ytpve1jpqvcygaxztszs.jpg"
+                      loading="lazy"
                       alt="Photo of Deogratias Taka"
                     />
                     <div>
@@ -606,14 +612,16 @@
         <div class="support">
           <div class="supporter-logo">
             <img
-              src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/kgpdl32nkqn8f3btagdo.png"
+              src="https://kifaru.infi-saas.com/media/Eco-Print/img/kgpdl32nkqn8f3btagdo.png"
               alt="Close the gap"
+              loading="lazy"
             />
           </div>
 
           <div class="supporter-logo">
             <img
-              src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146384/EcoPrintGeneration/img/zm1rmu7wl85vknrf3p7q.png"
+              src="https://kifaru.infi-saas.com/media/Eco-Print/img/zm1rmu7wl85vknrf3p7q.png"
+              loading="lazy"
               alt="Infitech Innovation"
             />
           </div>
@@ -655,16 +663,16 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​" target="_blank"
               ><i class="fa-brands fa-facebook-f"></i
             ></a>
-            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09" target="_blank"
               ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https://www.linkedin.com/company/eco-prints-generation"
+            <a href="https://www.linkedin.com/company/eco-prints-generation" target="_blank"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
@@ -676,7 +684,7 @@
         <p>&copy; 2025 EcoPrint. All Rights Reserved.</p>
       </div>
     </footer>
-    <script src="js/script.js"></script>
-    <script src="js/animate.js"></script>
+    <!-- <script src="js/script.js"></script>
+    <script src="js/animate.js"></script> -->
   </body>
 </html>
