--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - EcoPrint</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    <link rel="stylesheet" href="assets/css/all.min.css" />
+    <link rel="stylesheet" href="css/animate.css" />
+    <meta
+      name="description"
+      content="Get in touch with EcoPrint Generation — your partner in sustainable 3D printing solutions. Contact us for inquiries, support, or to learn more about our eco-friendly products and services."
     />
   </head>
   <body>
@@ -16,9 +18,10 @@
       <div class="container">
         <a href="#" class="brand">
           <img
-            src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            src="https://kifaru.infi-saas.com/media/Eco-Print/img/gyqgmn0awfvulr3dfoio.png"
             alt="Logo"
             class="logo"
+            loading="lazy"
           />
         </a>
         <button class="hamburger" id="hamburger">
@@ -138,7 +141,7 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-           <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="service.html">Services</a></li>
             <li><a href="portfolio.html">Our Portfolio</a></li>
@@ -149,16 +152,16 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​" target="_blank"
               ><i class="fa-brands fa-facebook-f"></i
             ></a>
-            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09" target="_blank"
               ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https://www.linkedin.com/company/eco-prints-generation"
+            <a href="https://www.linkedin.com/company/eco-prints-generation" target="_blank"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
