--- a/index.html
+++ b/index.html
@@ -10,23 +10,12 @@
     <title>EcoPrint Generation - Plastic Waste to Educational Models</title>
 
     <!-- Preconnect to external domains -->
-    <link rel="preconnect" href="https://res.cloudinary.com" />
+    <link rel="preconnect" href="https://kifaru.infi-saas.com/media/" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
     <!-- Defer non-critical CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      media="print"
-      onload="this.media='all'"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-      />
-    </noscript>
+    <link rel="stylesheet" href="assets/css/all.min.css">
 
     <style>
       .lazy {
@@ -35,7 +24,7 @@
       }
 
       .lazy.loaded {
-        opacity: 1;
+        opacity: 1; 
       }
     </style>
   </head>
@@ -45,7 +34,7 @@
       <div class="container">
         <a href="#" class="brand">
           <img
-            src="https://res.cloudinary.com/drselhsl4/image/upload/w_200,f_auto,q_auto/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            src="https://kifaru.infi-saas.com/media/Eco-Print/img/gyqgmn0awfvulr3dfoio.png"
             alt="EcoPrint Generation Logo"
             class="logo"
           />
@@ -78,10 +67,10 @@
             loop
             playsinline
             preload="metadata"
-            poster="https://res.cloudinary.com/drselhsl4/image/upload/v1761146415/EcoPrintGeneration/img/t8ga5jh4zvsguw8gli8g.jpg"
+            poster="https://kifaru.infi-saas.com/media/Eco-Print/img/t8ga5jh4zvsguw8gli8g.jpg"
           >
             <source
-              src="https://res.cloudinary.com/drselhsl4/video/upload/v1761146482/EcoPrintGeneration/videos/k8ju7npozxfwn09uhwsq.mp4"
+              src="https://kifaru.infi-saas.com/media/Eco-Print/videos/k8ju7npozxfwn09uhwsq.mp4"
               type="video/mp4"
             />
           </video>
@@ -95,10 +84,10 @@
             loop
             playsinline
             preload="metadata"
-            poster="https://res.cloudinary.com/drselhsl4/image/upload/w_800,f_auto,q_auto/v1761146385/EcoPrintGeneration/img/hv0fhn3t3wkfwoevqzcf.jpg"
+            poster="https://kifaru.infi-saas.com/media/Eco-Print/img/hv0fhn3t3wkfwoevqzcf.jpg"
           >
             <source
-              src="https://res.cloudinary.com/drselhsl4/video/upload/v1761146604/EcoPrintGeneration/videos/vogtukcivxwuzbnssfha.mp4"
+              src="https://kifaru.infi-saas.com/media/Eco-Print/videos/vogtukcivxwuzbnssfha.mp4"
               type="video/mp4"
             />
           </video>
@@ -112,10 +101,10 @@
             loop
             playsinline
             preload="metadata"
-            poster="https://res.cloudinary.com/drselhsl4/image/upload/w_800,f_auto,q_auto/v1761146402/EcoPrintGeneration/img/ysebe2zp7uycypgftazo.jpg"
+            poster="https://kifaru.infi-saas.com/media/Eco-Print/img/ysebe2zp7uycypgftazo.jpg"
           >
             <source
-              src="https://res.cloudinary.com/drselhsl4/video/upload/v1761146482/EcoPrintGeneration/videos/qb5st3o60n8ta2vqwisf.mp4"
+              src="https://kifaru.infi-saas.com/media/Eco-Print/videos/qb5st3o60n8ta2vqwisf.mp4"
               type="video/mp4"
             />
           </video>
@@ -207,7 +196,7 @@
 
           <figure class="about-media" data-animate="up">
             <img
-              data-src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/ysebe2zp7uycypgftazo.jpg"
+              data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/ysebe2zp7uycypgftazo.jpg"
               alt="EcoPrint process splash"
               class="lazy"
               width="600"
@@ -321,7 +310,7 @@
             <li class="pq-step">
               <figure class="pq-card">
                 <img
-                  data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_400,f_auto,q_auto/v1761146381/EcoPrintGeneration/img/voxp68mgjrssut2kjbua.jpg"
+                  data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/voxp68mgjrssut2kjbua.jpg"
                   alt="Collecting plastic waste"
                   class="lazy"
                   width="400"
@@ -341,7 +330,7 @@
             <li class="pq-step">
               <figure class="pq-card">
                 <img
-                  data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_400,f_auto,q_auto/v1761146415/EcoPrintGeneration/img/t8ga5jh4zvsguw8gli8g.jpg"
+                  data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/t8ga5jh4zvsguw8gli8g.jpg"
                   alt="Sorting and cleaning"
                   class="lazy"
                   width="400"
@@ -358,7 +347,7 @@
             <li class="pq-step">
               <figure class="pq-card">
                 <img
-                  data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_400,f_auto,q_auto/v1761146412/EcoPrintGeneration/img/hao3bmjq9hdev3dqodgc.jpg"
+                  data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/hao3bmjq9hdev3dqodgc.jpg"
                   alt="Shredding plastic"
                   class="lazy"
                   width="400"
@@ -375,7 +364,7 @@
             <li class="pq-step">
               <figure class="pq-card">
                 <img
-                  data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_400,f_auto,q_auto/v1761146383/EcoPrintGeneration/img/tkchbn5m34vhfulrgt9p.jpg"
+                  data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/tkchbn5m34vhfulrgt9p.jpg"
                   alt="Extrusion to filament"
                   class="lazy"
                   width="400"
@@ -392,7 +381,7 @@
             <li class="pq-step">
               <figure class="pq-card">
                 <img
-                  data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_400,f_auto,q_auto/v1761146412/EcoPrintGeneration/img/t33lagtr2hnuhlshy0wy.jpg"
+                  data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/t33lagtr2hnuhlshy0wy.jpg"
                   alt="Spooling filament"
                   class="lazy"
                   width="400"
@@ -409,7 +398,7 @@
             <li class="pq-step">
               <figure class="pq-card">
                 <img
-                  data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_400,f_auto,q_auto/v1761146385/EcoPrintGeneration/img/hv0fhn3t3wkfwoevqzcf.jpg"
+                  data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/hv0fhn3t3wkfwoevqzcf.jpg"
                   alt="3D printing models"
                   class="lazy"
                   width="400"
@@ -426,7 +415,7 @@
             <li class="pq-step">
               <figure class="pq-card">
                 <img
-                  data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_400,f_auto,q_auto/v1761146381/EcoPrintGeneration/img/d7oplxia9xnqffcw0oat.jpg"
+                  data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/d7oplxia9xnqffcw0oat.jpg"
                   alt="STEM education models in use"
                   class="lazy"
                   width="400"
@@ -453,7 +442,7 @@
       <div class="shop-container">
         <a href="shop.html" class="shop-card" data-animate>
           <img
-            data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_600,f_auto,q_auto/v1761146444/EcoPrintGeneration/img/ryfsznyndjfnq8p8fove.jpg"
+            data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/ryfsznyndjfnq8p8fove.jpg"
             alt="STEM models"
             class="lazy"
             width="600"
@@ -467,7 +456,7 @@
 
         <a href="shop.html" class="shop-card" data-animate>
           <img
-            data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_600,f_auto,q_auto/v1761146400/EcoPrintGeneration/img/xz55ngsdoxzjld3uqlqv.jpg"
+            data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/xz55ngsdoxzjld3uqlqv.jpg"
             alt="Architecture Prototype"
             class="lazy"
             width="600"
@@ -481,7 +470,7 @@
 
         <a href="shop.html" class="shop-card" data-animate>
           <img
-            data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_600,f_auto,q_auto/v1761146380/EcoPrintGeneration/img/rn8r2v4i5ygdhrchbnsf.jpg"
+            data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/rn8r2v4i5ygdhrchbnsf.jpg"
             alt="3D printed Accessories"
             class="lazy"
             width="600"
@@ -717,7 +706,7 @@
       <div class="support">
         <div class="supporter-logo">
           <img
-            data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_300,f_auto,q_auto/v1761146381/EcoPrintGeneration/img/kgpdl32nkqn8f3btagdo.png"
+            data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/kgpdl32nkqn8f3btagdo.png"
             alt="Partner 1"
             class="lazy"
             width="300"
@@ -727,7 +716,7 @@
 
         <div class="supporter-logo">
           <img
-            data-src="https://res.cloudinary.com/drselhsl4/image/upload/w_300,f_auto,q_auto/v1761146384/EcoPrintGeneration/img/zm1rmu7wl85vknrf3p7q.png"
+            data-src="https://kifaru.infi-saas.com/media/Eco-Print/img/zm1rmu7wl85vknrf3p7q.png"
             alt="Partner 2"
             class="lazy"
             width="300"
@@ -767,16 +756,16 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​" target="_blank"
               ><i class="fa-brands fa-facebook-f"></i
             ></a>
-            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09" target="_blank"
               ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https://www.linkedin.com/company/eco-prints-generation"
+            <a href="https://www.linkedin.com/company/eco-prints-generation" target="_blank"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
