--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/animate.css" />
+    <meta
+      name="description"
+      content="Discover EcoPrint Generation's portfolio showcasing our impact in sustainable 3D printing. See how we’ve transformed plastic waste into educational tools, created green jobs, and contributed to environmental conservation through innovative solutions."
+    />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -14,7 +18,7 @@
       <div class="container">
         <a href="#" class="brand">
           <img
-            src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            src="https://kifaru.infi-saas.com/media/Eco-Print/img/gyqgmn0awfvulr3dfoio.png"
             alt="Logo"
             class="logo"
           />
@@ -99,7 +103,7 @@
           <div class="sdg-card animate slide-up">
             <div class="the-sdg">
               <img
-                src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/sp7ffp3zu39llawfv8xv.png"
+                src="https://kifaru.infi-saas.com/media/Eco-Print/img/sp7ffp3zu39llawfv8xv.png"
                 alt="Quality Education (SDG 4)"
               />
               <div class="sdg-details">
@@ -117,7 +121,7 @@
           <div class="sdg-card animate slide-up">
             <div class="the-sdg">
               <img
-                src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/avdj6h4qbmxcmwwmviwa.png"
+                src="https://kifaru.infi-saas.com/media/Eco-Print/img/avdj6h4qbmxcmwwmviwa.png"
                 alt="Decent Work & Growth (SDG 8)"
               />
               <div class="sdg-details">
@@ -135,7 +139,7 @@
           <div class="sdg-card animate slide-up">
             <div class="the-sdg">
               <img
-                src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/l0jp8kdsjbniyflgpgw9.png"
+                src="https://kifaru.infi-saas.com/media/Eco-Print/img/l0jp8kdsjbniyflgpgw9.png"
                 alt="Responsible Consumption (SDG 12)"
               />
               <div class="sdg-details">
@@ -154,7 +158,7 @@
           <div class="sdg-card animate slide-up">
             <div class="the-sdg">
               <img
-                src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627090/EcoPrintGeneration/img/bprd5dmxthbclhmsri4r.png"
+                src="https://kifaru.infi-saas.com/media/Eco-Print/img/bprd5dmxthbclhmsri4r.png"
                 alt="Climate Action (SDG 13)"
               />
               <div class="sdg-details">
@@ -173,7 +177,7 @@
           <div class="sdg-card animate slide-up">
             <div class="the-sdg">
               <img
-                src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627103/EcoPrintGeneration/img/dyegnukwzme8axujntqm.png"
+                src="https://kifaru.infi-saas.com/media/Eco-Print/img/dyegnukwzme8axujntqm.png"
                 alt="Life Below Water (SDG 14)"
               />
               <div class="sdg-details">
@@ -191,7 +195,7 @@
           <div class="sdg-card animate slide-up">
             <div class="the-sdg">
               <img
-                src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627112/EcoPrintGeneration/img/yqsin8g6zyiahxgy8lkj.png"
+                src="https://kifaru.infi-saas.com/media/Eco-Print/img/yqsin8g6zyiahxgy8lkj.png"
                 alt="Life on Land(SDG 15)"
               />
               <div class="sdg-details">
@@ -288,16 +292,16 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​" target="_blank"
               ><i class="fa-brands fa-facebook-f"></i
             ></a>
-            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09" target="_blank"
               ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https://www.linkedin.com/company/eco-prints-generation"
+            <a href="https://www.linkedin.com/company/eco-prints-generation" target="_blank"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
