--- a/service.html
+++ b/service.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,6 +6,10 @@
     <title>Eco-Print -Service Section</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/animate.css" />
+    <meta
+      name="description"
+      content="Discover EcoPrint Generation's services — from sustainable 3D printing solutions and custom design to educational workshops and community recycling programs. Learn how we can help you create with purpose."
+    />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -13,7 +17,7 @@
       <div class="container">
         <a href="#" class="brand">
           <img
-            src="https://res.cloudinary.com/drselhsl4/image/upload/w_200,f_auto,q_auto/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            src="https://kifaru.infi-saas.com/media/Eco-Print/img/gyqgmn0awfvulr3dfoio.png"
             alt="EcoPrint Generation Logo"
             class="logo"
           />
@@ -35,14 +39,13 @@
     </nav>
     <!-- Service -->
     <section class="services-section">
-      <h2 class="section-title">Our Services</h2>
-      <div class="services-hero animate fade-in">
-        <img
-          src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146383/EcoPrintGeneration/img/zxqgxhqccjh0jhsjiq6e.jpg"
-          alt="Our Services Hero"
-        />
+      <div>
+        <h2 class="section-title">Our Services</h2>
+        <p class="section-subtitle">
+          Discover how we're transforming plastic waste into educational and
+          creative opportunities.
+        </p>
       </div>
-
       <div class="container">
         <div class="services-grid">
           <div class="service-card animate fade-in">
@@ -119,7 +122,7 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-             <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="service.html">Services</a></li>
             <li><a href="portfolio.html">Our Portfolio</a></li>
@@ -129,16 +132,16 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​" target="_blank"
               ><i class="fa-brands fa-facebook-f"></i
             ></a>
-            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09" target="_blank"
               ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https://www.linkedin.com/company/eco-prints-generation"
+            <a href="https://www.linkedin.com/company/eco-prints-generation" target="_blank"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
