--- a/shop.html
+++ b/shop.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eco Print Shop</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="assets/css/all.min.css">
+     <link rel="stylesheet" href="css/animate.css" />
+     <meta
+       name="description"
+       content="Explore EcoPrint Shop — your destination for eco-friendly 3D printed products, including STEM models, prototypes, accessories, and custom designs. Shop sustainably today!"
+     />
   </head>
   <body>
     <!-- Navbar Start -->
@@ -16,9 +18,10 @@
       <div class="container">
         <a href="#" class="brand">
           <img
-            src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/gyqgmn0awfvulr3dfoio.png"
+            src="https://kifaru.infi-saas.com/media/Eco-Print/img/gyqgmn0awfvulr3dfoio.png"
             alt="Logo"
             class="logo"
+            loading="lazy"
           />
         </a>
         <button class="hamburger" id="hamburger">
@@ -43,7 +46,7 @@
         <article
           class="card card--hero"
           style="
-            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230797/EcoPrintGeneration/img/Customized/qe0qgbvib1airqnsajjw.webp);
+            --img: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Customized/qe0qgbvib1airqnsajjw.webp);
           "
           aria-label="shop on EcoPrint"
         >
@@ -62,7 +65,7 @@
         <article
           class="card"
           style="
-            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288299/EcoPrintGeneration/img/models/zzzkvxvxoywkm9hemssh.jpg);
+            --img: url(https://kifaru.infi-saas.com/media/Eco-Print/img/models/zzzkvxvxoywkm9hemssh.jpg);
           "
           aria-label="Stem"
         >
@@ -79,7 +82,7 @@
         <article
           class="card"
           style="
-            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230886/EcoPrintGeneration/img/Prototypes/njm0tkpvof7jnujrbn5s.jpg);
+            --img: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Prototypes/njm0tkpvof7jnujrbn5s.jpg);
           "
           aria-label="Prototype"
         >
@@ -96,7 +99,7 @@
         <article
           class="card"
           style="
-            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230742/EcoPrintGeneration/img/assesories/sryoenm5ikd2o7ioixo0.jpg);
+            --img: url(https://kifaru.infi-saas.com/media/Eco-Print/img/assesories/sryoenm5ikd2o7ioixo0.jpg);
           "
           aria-label="Accessories"
         >
@@ -113,7 +116,7 @@
         <article
           class="card"
           style="
-            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230794/EcoPrintGeneration/img/Customized/yq1te7q8pjvdpwt5itfr.jpg);
+            --img: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Customized/yq1te7q8pjvdpwt5itfr.jpg);
           "
           aria-label="Customize"
         >
@@ -151,7 +154,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288299/EcoPrintGeneration/img/models/zjuje4ezmcvmtkhdeikt.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/models/zjuje4ezmcvmtkhdeikt.jpg);
               "
             ></div>
             <div class="product-info">
@@ -168,7 +171,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288301/EcoPrintGeneration/img/models/j28njkv0pnpzkr8cbnhy.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/models/j28njkv0pnpzkr8cbnhy.jpg);
               "
             ></div>
             <div class="product-info">
@@ -185,7 +188,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288302/EcoPrintGeneration/img/models/zgol21abpxia3tpiedh2.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/models/zgol21abpxia3tpiedh2.jpg);
               "
             ></div>
             <div class="product-info">
@@ -202,7 +205,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288304/EcoPrintGeneration/img/models/rgihfbpohwavr0e9uydl.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/models/rgihfbpohwavr0e9uydl.jpg);
               "
             ></div>
             <div class="product-info">
@@ -219,7 +222,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288301/EcoPrintGeneration/img/models/u4yh7cptrcbjz4f4slui.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/models/u4yh7cptrcbjz4f4slui.jpg);
               "
             ></div>
             <div class="product-info">
@@ -263,7 +266,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230886/EcoPrintGeneration/img/Prototypes/njm0tkpvof7jnujrbn5s.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Prototypes/njm0tkpvof7jnujrbn5s.jpg);
               "
             ></div>
             <div class="product-info">
@@ -280,7 +283,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230884/EcoPrintGeneration/img/Prototypes/o3aoepibmpzxqfczgap8.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Prototypes/o3aoepibmpzxqfczgap8.jpg);
               "
             ></div>
             <div class="product-info">
@@ -297,7 +300,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230882/EcoPrintGeneration/img/Prototypes/xmsd5uhtkzchqimno6tn.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Prototypes/xmsd5uhtkzchqimno6tn.jpg);
               "
             ></div>
             <div class="product-info">
@@ -314,7 +317,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230880/EcoPrintGeneration/img/Prototypes/m9ckyp42y0qj2b4yy3ti.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Prototypes/m9ckyp42y0qj2b4yy3ti.jpg);
               "
             ></div>
             <div class="product-info">
@@ -331,7 +334,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230881/EcoPrintGeneration/img/Prototypes/euts14uw5ou49vgony01.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Prototypes/euts14uw5ou49vgony01.jpg);
               "
             ></div>
             <div class="product-info">
@@ -375,7 +378,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230744/EcoPrintGeneration/img/assesories/l2cio50alxs57gndsk9p.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/assesories/l2cio50alxs57gndsk9p.jpg);
               "
             ></div>
             <div class="product-info">
@@ -392,7 +395,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230743/EcoPrintGeneration/img/assesories/n0sqhwfonmfynnf3ldrc.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/assesories/n0sqhwfonmfynnf3ldrc.jpg);
               "
             ></div>
             <div class="product-info">
@@ -409,7 +412,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230742/EcoPrintGeneration/img/assesories/xmf3fntvhkb8hhnvml60.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/assesories/xmf3fntvhkb8hhnvml60.jpg);
               "
             ></div>
             <div class="product-info">
@@ -426,7 +429,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230742/EcoPrintGeneration/img/assesories/qw7spenfbev3fzxqw7j2.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/assesories/qw7spenfbev3fzxqw7j2.jpg);
               "
             ></div>
             <div class="product-info">
@@ -443,7 +446,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230742/EcoPrintGeneration/img/assesories/sryoenm5ikd2o7ioixo0.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/assesories/sryoenm5ikd2o7ioixo0.jpg);
               "
             ></div>
             <div class="product-info">
@@ -487,7 +490,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230797/EcoPrintGeneration/img/Customized/qe0qgbvib1airqnsajjw.webp);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Customized/qe0qgbvib1airqnsajjw.webp);
               "
             ></div>
             <div class="product-info">
@@ -504,7 +507,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230794/EcoPrintGeneration/img/Customized/yq1te7q8pjvdpwt5itfr.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Customized/yq1te7q8pjvdpwt5itfr.jpg);
               "
             ></div>
             <div class="product-info">
@@ -521,7 +524,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230795/EcoPrintGeneration/img/Customized/vhxrb3favfrpvxibolo1.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Customized/vhxrb3favfrpvxibolo1.jpg);
               "
             ></div>
             <div class="product-info">
@@ -538,7 +541,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230794/EcoPrintGeneration/img/Customized/cm5q59sogkq6eyvtizd4.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Customized/cm5q59sogkq6eyvtizd4.jpg);
               "
             ></div>
             <div class="product-info">
@@ -555,7 +558,7 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230795/EcoPrintGeneration/img/Customized/gg38gji1e1qw0ndm0kiu.jpg);
+                background-image: url(https://kifaru.infi-saas.com/media/Eco-Print/img/Customized/gg38gji1e1qw0ndm0kiu.jpg);
               "
             ></div>
             <div class="product-info">
@@ -644,7 +647,8 @@
               <!-- Testimonial 1 -->
               <li class="tms-slide">
                 <figure class="tms-card">
-                  <div class="tms-top">                    <div>
+                  <div class="tms-top">
+                    <div>
                       <h3 class="tms-name">Amina K.</h3>
                       <p class="tms-role">STEM Teacher • Nairobi</p>
                     </div>
@@ -773,7 +777,7 @@
         <div class="footer-nav">
           <h3>Quick Links</h3>
           <ul>
-             <li><a href="about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="service.html">Services</a></li>
             <li><a href="portfolio.html">Our Portfolio</a></li>
@@ -784,16 +788,16 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​" target="_blank"
               ><i class="fa-brands fa-facebook-f"></i
             ></a>
-            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09" target="_blank"
               ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo" target="_blank"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="https://www.linkedin.com/company/eco-prints-generation"
+            <a href="https://www.linkedin.com/company/eco-prints-generation" target="_blank"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
